...
        android:maxEms="7"
        android:maxLines="4"
        android:singleLine="false"
        android:text="titre"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/miniaturePublicationImageView"
        app:layout_constraintEnd_toStartOf="@+id/likeButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/miniaturePublicationImageView"
        app:layout_constraintTop_toTopOf="@+id/miniaturePublicationImageView" />

    <LinearLayout
        android:id="@+id/likeButton"
...
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/miniaturePublicationImageView"
        app:layout_constraintEnd_toStartOf="@+id/dislikeButton"
        app:layout_constraintTop_toTopOf="@+id/miniaturePublicationImageView"
        app:layout_constraintVertical_bias="0.507">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
...
