...
        android:id="@+id/newPublicationYoutubeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/youtube"
        app:layout_constraintBottom_toBottomOf="@+id/publicationRecyclerView"
        app:layout_constraintEnd_toEndOf="@+id/bottomFlow"
        app:layout_constraintStart_toEndOf="@+id/newPublicationSoundcloudButton"
        app:layout_constraintTop_toTopOf="@+id/newPublicationSoundcloudButton" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/newPublicationSoundcloudButton"
...
